--- a/client/index.html
+++ b/client/index.html
@@ -140,7 +140,7 @@
         <div class="panel" id="connection">
             <div class="error-div hidden no-margin red" id="error-div">Hey</div>
             <input type="text" id="username" placeholder="Insert Username"><br>
-            <input type="text" id="address" placeholder="Input Server Address" value="127.0.0.1:8080"><br>
+            <input type="text" id="address" placeholder="Input Server Address" value="islandr.io:8080"><br>
             <div class="box-selectable">
                 <div class="mode_box" id="normal">
                     <div class="button" id="button-normal_mode"> Normal Mode</div>
